# lfo601

./: CMakeLists.txt  CMakePresets.json  README.md  VERSION_2_0_NOTES.md  build_windows.bat
.github/workflows/: main.yml  windows-vst3.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
